(Hopefully) fix vertical scrollbar in Firefox

--- a/app/styles/_search.scss
+++ b/app/styles/_search.scss
@@ -42,8 +42,10 @@
 .twitter-typeahead {
 	padding: 0;
 	width: 100%;
+	box-sizing: border-box;
 	input {
 		width: 100%;
+		box-sizing: border-box;
 	}
 }
 
